--- a/VScode/Graduation_project_testing_modules/platformio.ini
+++ b/VScode/Graduation_project_testing_modules/platformio.ini
@@ -8,12 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:graduation_project]
+[env:upesy_wrover]
 platform = espressif32
 board = upesy_wrover
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	sandeepmistry/LoRa@^0.8.0
 	mikalhart/TinyGPSPlus @ ^1.0.3
+	sandeepmistry/LoRa @ ^0.8.0
+	plerup/EspSoftwareSerial @ ^6.16.1
 	SPI
