--- a/VScode/Graduation_project_testing_modules/platformio.ini
+++ b/VScode/Graduation_project_testing_modules/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	SPI
 	plerup/EspSoftwareSerial@^6.16.1
 	mikalhart/TinyGPSPlus @ ^1.0.3
+	ayushsharma82/AsyncElegantOTA @ ^2.2.7
+	me-no-dev/AsyncTCP @ ^1.1.1
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
